Bugfix MessageDateSeparator component is not centered.

--- a/src/components/Message/MessageDateSeparator.css
+++ b/src/components/Message/MessageDateSeparator.css
@@ -1,6 +1,14 @@
 .message-date-separator-root {
   padding-top:10px;
 }
+.message-date-separator-separate {
+  width: 100%;
+  border-top: 1px solid;
+  border-color: #E0E0E0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .message-date-separator-date {
   font-size: 0.6em;
   color: #212121;
@@ -10,16 +18,8 @@
   border: 0px solid #E0E0E0;
   border-radius: 15px;
   padding: 5px 10px;
-  margin: -12px 0 20px 43%;
-  text-align: center;
-  clear: both;
-  float: left;
+  margin-top: -12px;
   font-weight: 100;
-}
-.message-date-separator-separate {
-  width: 100%;
-  border-top: 1px solid;
-  border-color: #E0E0E0;
 }
 .message-date-separator-clear {
   clear: both;
